# hematology-uptodate

./: .gitignore  CLAUDE.md  build_site.py  main.py  pyproject.toml  wrangler.jsonc
.github/workflows/: publish-wiki.yml  weekly-report.yml
config/: seeds.txt
manifests/: latest.json
reports/: 2026-W16.md  benign-2026-W19.md  benign-2026-W20.md  malignant-2026-W19.md  malignant-2026-W20.md
scripts/: build_manifest.py  generate_and_email.py  generate_report.py
source/benign/: drug_groups.yml  journals.yml  keywords.yml  search_queries.yml  seeds.txt  web_sources.yml
source/malignant/: drug_groups.yml  journals.yml  keywords.yml  search_queries.yml  seeds.txt  twitter.yml  web_sources.yml
src/: abstract_backfill.py  config.py  crossref_fetcher.py  discover.py  fetcher.py  reporter.py  webscraper.py
